# dbflib

./: .gitignore  CMakeLists.txt
include/: DBaseFile.h  DBaseRecord.h
src/: DBaseColDef.cpp  DBaseFile.cpp  DBaseHeader.cpp
